fix bug time no run and change scene

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "GreenNight.sln"
+    "dotnet.defaultSolution": "ProjectGFresh.sln"
 }
